# cogitarium

./: .env.sample  LICENSE  Makefile  README.md  ROADMAP.md
backend/: cli.py  main.py  pyproject.toml  requirements.txt
backend/config/: __init__.py  config.py  translations.py
backend/core/: __init__.py  ai_config.py  api.py  assistant.py  cache.db  cache.py  context_builder.py  embedder.py  embeddings.py  i18n.py  init.py  init_lancedb.py  loader.py  logger.py  query_rewrite.py  search.py  translator.py  vector_store.py
backend/data/: leandro.md
backend/routes/: __init__.py  cache.py  chat.py  home.py  logs.py
backend/templates/: cache.html  home.html  index.html  logs.html
backend/templates/components/: header.html  script.js  styles.css
backend/translations/: en.json  es.json  pt.json
devcontainer/: devcontainer.json
