[project]
name = "cotarium"
version = "1.0.0"
description = "AI assistant designed to be your second brain."
authors = [
    {name = "Edgar Masagué"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "openai (>=1.77.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "azure-identity (>=1.21.0,<2.0.0)",
    "lancedb (>=0.22.0,<0.23.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)",
    "lunr (>=0.8.0,<0.9.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.6"
flake8 = "^7.2.0"
isort = "^6.0.1"
blank = "^0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
